termino de teste

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <p>imagem</p>
         </div>
         <ul>
-            <li><a href="#">home</a></li>
+            <li><a href="#">Home</a></li>
             <li>
-                <a href="#">empresa</a>
+                <span>Empresa</span>
                 <ul class="dropdown">
                     <li><a href="#">submenu 1</a></li>
                     <li><a href="#">submenu 1</a></li>
                     <li><a href="#">submenu 1</a></li>
                     <li>
-                        <a href="#">submenu 1</a>
+                        <span>submenu 1</span>
                         <ul class="dropdown">
                             <li><a href="#">submenu 2</a></li>
                             <li><a href="#">submenu 2</a></li>
@@ -39,26 +39,24 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="#">clientes</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="#">Clientes</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </nav>
-
     <section class="sliders">
         <div class="container" id="slider">
             <img src="demo/images/up.jpg" alt="" title=" Um titulo qualquer" >
             <img src="demo/images/toystory.jpg" alt="" title="#htmllink" >
         </div>
-        <div id="htmllink" class="nivo-html-caption"> UM texto com um <a href="#">link</a>. </div>
+        <div id="htmllink" class="nivo-html-caption">Texto com um <a href="#" class="link">link</a>...</div>
     </section>
-
     <article class="container artigo">
         <section>
             <h1>TESTE DE HTML E CSS</h1>
             <h4>Quesitos de avaliação:</h4>
 
             <ul>
-                <li>Organisação de código (quanto mais limpo melhor);</li>
+                <li>Organização de código (quanto mais limpo melhor);</li>
                 <li>Nível detalhismo (quanto mais identico melhor);</li>
                 <li>Tempo de desenvolvimento (seja sincero ao enviar o tempo gasto);</li>
             </ul>
@@ -73,7 +71,6 @@
             </div>
         </section>
     </article>
-
     <section class="container destaques">
         <h2>boxes de destaque</h2>
         <div class="cards">
@@ -81,31 +78,30 @@
                 <div class="card_imagem">
                     <img src="https://via.placeholder.com/196x163" alt="">
                 </div>
-                <p>Um texto descritivo com um <a href="#" class="link">link</a> apenas </p>
+                <p>Um texto descritivo com<a href="#" class="link">link</a> apenas. </p>
             </article>
 
             <article>
                 <div class="card_imagem">
                     <img src="https://via.placeholder.com/196x163" alt="">
                 </div>
-                <p>Um texto descritivo com um <a href="#" class="link">link</a> apenas </p>
+                <p>Um texto descritivo com<a href="#" class="link">link</a> apenas. </p>
             </article>
 
             <article>
                 <div class="card_imagem">
                     <img src="https://via.placeholder.com/196x163" alt="">
                 </div>
-                <p>Um texto descritivo com um <a href="#" class="link">link</a> apenas </p>
+                <p>Um texto descritivo com<a href="#" class="link">link</a> apenas. </p>
             </article>
 
             <article>
                 <div class="card_imagem">
                     <img src="https://via.placeholder.com/196x163" alt="">
                 </div>
-                <p>Um texto descritivo com um <a href="#" class="link">link</a> apenas </p>
+                <p>Um texto descritivo com<a href="#" class="link">link</a> apenas. </p>
             </article>
         </div>
-        
     </section >
         
     <footer>
